src/test/deca/context/invalid/tests/ReturnIcompatible.deca
// Description:
//       Teste de return pour un type non prévu.
// 
// Resultats: 
//      Ligne 18: Le type de l'expression de droite est float alors que le type attendu est int
// 
// Historique:
//      cree le 21/01/2023
class A{
  int f(){
    float x = 2.5;
    return x;
  }
}
